crates/biome_plugin_loader/src/snapshots/mutations_invalid_operations_forged_anchor.snap
---
source: crates/biome_plugin_loader/src/analyzer_js_plugin.rs
expression: content
---
# Plugin

## `/plugin.js`

```js
import {
	ast,
	createMutation,
	defineRule,
	factory,
	registerDiagnostic,
} from "@biomejs/runtime/plugin";

export const fixer = defineRule({
	query: ast("JS_MODULE"),
	run(root) {
		const statement = root.items[0];
		const call = statement.expression;
		const args = call.arguments;
		const list = args.children()[0];
		const [first, second] = args.args;
		const token = first.token("valueToken");
		const mutation = createMutation(root);
		createMutation(Object.create(root));
	},
});
```

# Input

## `/file.js`

```js
call(1,2);
```

# Diagnostics

```block
/file.js plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Rule fixer errored: TypeError: createMutation() received a value that is not a Biome node. Pass the node supplied to run() or one of its child nodes, not a token, string, or plain object. (/plugin.js:14:15)
        at run (/plugin.js:14:15)
```
